- diskdrake:
  o really fix partition device name for some dmraid (missing "p", cf #38363)
- draksound (#37826):
  o add support to enable/disable PulseAudio
- cpufreq: fix gsx-suspmod probe
- scannerdrake: fix to open usbtable.gz instead of usbtable

Version 10.10 - 6 March 2008

- finish-install:
  o do not show broken Cancel button in license step (#38195)
- diskdrake: 
  o fix resizing/formatting ntfs (broken because of ntfs-3g switch in previous
    release)
  o fix partition device name for some dmraid (missing "p", cf #38363)
  o do not timeout after 10 minutes when resizing NTFS partition
- detect_devices:
  o provide sysfs device path on Firewire and PCMCIA bus
    (to be able to fix #33950 in drakx-net)

Version 10.9 - 5 March 2008

- adapt to new kernel-2.6.25's sysfs layout (Eric Pielbug, #38235)
- diskdrake: use ntfs-3g by default for ntfs partitions
- draksplash: do not re-install grub, only modify grub's config file
- select proper padlock module for Via CPU (#38311)

Version 10.7 - 3 March 2008

- bootloader-config:
  o have a nicer name for "mnb" kernels
- drakbug:
  o do not catch exception if $^S is undef 
    (occurs when "eval { require foo }" and foo.pm do "use not_available")
- use gurpmi when installing packages if possible (#24044)

Version 10.6.25 - 28 February 2008

- harddrake:
  o do not assign a mount point to partitions of type "Compaq diagnostics"
- API changes for drakx-net and rescue

Version 10.6.23 - 25 February 2008

- drakboot:
  o make sure users are not listed twice (#38116)
- drakfont:
  o fix crashing when encountering file names with meta characters on
    windows partitions (#36482)
- diskdrake:
  o jfsprogs is now jfsutils
- drop support for arch now that rpmdrake-4.3 dropped it

Version 10.6.22 - 18 February 2008

- diskdrake:
  o fix switching from LABEL=xxx to /dev/yyy in fstab (#37914)
- add support for snd-aw2
- drakboot --boot:
  o fix dropping grub "configfile" entries when switching to lilo
- draksound: