@@ -2,6 +2,7 @@
   o really fix partition device name for some dmraid (missing "p", cf #38363)
 - draksound (#37826):
   o add support to enable/disable PulseAudio
+  o add support to enable/disable user switching
 - cpufreq: fix gsx-suspmod probe
 - scannerdrake: fix to open usbtable.gz instead of usbtable
 
